tdf#130695 sw linguistic: fix custom abbreviations

linguistic: Abbreviations in the custom dictionary
were accepted without the terminating dot, too
(because bSimilarOnly comparison used by getEntry()
removes all terminating dots during the dictionary
look up.)

Because "Add to [custom] dictionary" always removed
the terminating dot, and direct editing of the custom
dictionaries is still not so comfortable, the following
user-friendly options were implemented for the
abbreviations:

– spell checking dialog: words with multiple dots
  – e.g. F.A.C.S. –, are always added to the custom dictionary
  with the terminating dot to reject the bad abbreviations:
  "e.g", "F.A.C.S" etc.;

– context menu: add optional menu items to the context menu
  of the abbreviations to put the word with the terminating
  dot into the custom dictionaries, e.g. for the word "Corp.":

  * standard.dic (Corp)
  * standard.dic (Corp.)

  as menu items of the the Add to Dictionary submenu.

Change-Id: I54532c0a63af8effe9f103e75e853703d7d57563
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196263
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins